<resources>
    <string name="app_name">MyChAt</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logup">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_sign_up">Sign up </string>
    <string name="action_sign_up_short">Sign up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
